# beaversec

./: .env.example  .gitignore  README.md  auto_scan.py  config.yaml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  resultado.json  testar_tudo.sh  teste.csv
.github/: ULL_REQUEST_TEMPLATE.md
BEAVERSEC/: CHANGELOG.md  CONTRIBUTING.md  LICENSE
BeaverSec-main/: README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  verificar_beaversec.sh
BeaverSec-main/.github/: ISSUE_TEMPLATE.md
BeaverSec-main/.github/workflows/: ci.yml
BeaverSec-main/beaversec/: __init__.py  cli.py
BeaverSec-main/beaversec.egg-info/: requires.txt  top_level.txt
BeaverSec-main/beaversec/core/: beaver.py  handler.py  logging.py  rate_limiter.py  registry.py
BeaverSec-main/beaversec/exporters/: __init__.py  csv_exporter.py
BeaverSec-main/beaversec/modules/: __init__.py  meu_modulo.py  ping_sweep.py  ssl_cipher_scan.py  traceroute.py  udp_scan.py  whois_lookup.py
BeaverSec-main/beaversec/utils/: security.py  validators.py
BeaverSec-main/scripts/: install.sh
BeaverSec-main/tests/: test_cli.py  test_os_detection.py  test_ping_sweep.py  test_service_detection.py  test_ssl_cipher_scan.py  test_vuln_scanner.py
beaversec/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py
beaversec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
beaversec/cli/: __init__.py  commands.py  paser.py
beaversec/config/: __init__.py  loader.py
beaversec/config/templates/: config.yaml.template  logging.yaml.template
beaversec/core/: __init__.py  base.py  base_module.py  beaver.py  exceptions.py  handler.py  rate_limiter.py  sanitizer.py  scanner.py  security.py  transport.py  validators.py
beaversec/exporters/: csv_exporter.py  html_exporter.py  json_exporter.py
beaversec/modules/: __init__.py  arp_scan.py  base.py  dns_enum.py  dns_zone_transfer.py  http_headers.py  os_detection.py  ping_sweep.py  port_scanner.py  service_detection.py  shodan_enum.py  snmp_enum.py  ssl_cipher_scan.py  ssl_scan.py  subdomain_brute.py  syn_scan.py  udp_scan.py  vuln_scanner.py  whois_lookup.py
beaversec/utils/: __init__.py  audit_logger.py  credential_manager.py  logger.py  network.py  output.py  rate_limiter.py  reporters.py  security.py
exporters/: html_exporter.py
modules/: banner_grabber.py  dns_enum.py  http_headers.py  ssl_scan.py  subdomain_brute.py  traceroute.py  whois_lookup.py
scripts/: install.ps1  install.sh  setup.py
tests/: conftest.py  test_arp_scan.py  test_dns_zone_transfer.py  test_http_headers.py  test_modules.py  test_ping_sweep.py  test_port_scanner.py  test_shodan_enum.py  test_snmp_enum.py  test_ssl_scan.py  test_subdomain_brute.py  test_syn_scan.py  test_udp_scan.py
tests/test_core/: test_security.py  test_validators.py
utils/: config_loader.py
