[project]
name = "BeaverSec"
version = "3.0.0"
description = "BeaverSec - Modular Offensive Security"
authors = [
  { name="Amelia Ellingsen", email="aellingsen@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
# existing deps retained...
click = "^8.1"
pydantic = "^1.10"
# New/updated dependencies
aiohttp = "^3.8"
scapy = {version = "^2.4", optional = true}
shodan = "^1.27"
pysnmp = "^4.4"
dnspython = "^2.3"
pyyaml = "^6.0"
pytest = {version = "^7.0", optional = true}
cryptography = "^41.0"
python-multipart = "^0.0.6"

[tool.poetry.extras]
scapy = ["scapy"]
tests = ["pytest"]
