[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beaversec"
version = "3.0.0"
description = "Ferramenta modular de segurança ofensiva"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jhonatan", email = "jhonatanlucassantos9@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "pydantic>=1.10",
    "aiohttp>=3.8",
    "pyyaml>=6.0",
    "dnspython>=2.3",
    "shodan>=1.27",
    "pysnmp>=4.4",
    "scapy>=2.4",
    "cryptography>=41.0",
    "python-multipart>=0.0.6",
    "pytest>=7.0",
]

[project.scripts]
beaversec = "beaversec.cli:cli"

[tool.setuptools.packages.find]
include = ["beaversec*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=beaversec --cov-report=term"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
